# wagabotowy

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
wagabotowy/: app_parameters.py  constants.py  custom_exceptions.py  discord_summarizer.py  gemini_api_connection.py  local_discussion_summary.py  local_yt_summary.py
